Checkstyle
git-svn-id: https://versjonskontroll.adeo.no/svn/nav-sbl/dialogarena/minehenvendelser/trunk@18768 6ec884bf-e345-0410-bd42-d282eb737ba0